@@ -1,16 +1,11 @@
 package dev.gagnon.service;
 
-import dev.gagnon.dto.request.AddToCartRequest;
-import dev.gagnon.dto.request.CartItemDto;
-import dev.gagnon.dto.request.CheckoutRequest;
-import dev.gagnon.dto.request.UpdateCartItemRequest;
+import dev.gagnon.dto.request.*;
 import dev.gagnon.dto.response.*;
 import dev.gagnon.exception.BusinessException;
 import dev.gagnon.exception.ResourceNotFoundException;
 import dev.gagnon.model.*;
-import dev.gagnon.repository.CartRepository;
-import dev.gagnon.repository.OrderItemRepository;
-import dev.gagnon.repository.OrderRepository;
+import dev.gagnon.repository.*;
 import dev.gagnon.utils.EventPublisherAdapter;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
@@ -25,31 +20,30 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
-@Transactional
 @RequiredArgsConstructor
 public class OrderService {
     private static final int MAX_CART_ITEMS = 20;
     private final EventPublisherAdapter eventPublisher;
     private final OrderItemRepository orderItemRepository;
-    
+    private final WishListRepository wishListRepository;
+
     private final CartRepository cartRepository;
     private final OrderRepository orderRepository;
     private final ProductServiceClient productServiceClient;
+    private final WishListItemRepository wishListItemRepository;
     private final ModelMapper modelMapper;
 
+    @Transactional
     public CartResponse addToCart(String cartId, String buyerEmail, AddToCartRequest request) {
         ProductResponseDto product = productServiceClient.getProduct(request.getProductId());
         validateProductAvailability(product, request.getQuantity());
-
         Cart cart = getOrCreateCart(cartId, buyerEmail);
-
         if (cart.getItems().size() >= MAX_CART_ITEMS) {
             throw new BusinessException("Cart cannot contain more than " + MAX_CART_ITEMS + " items");
         }
-
         Optional<CartItem> existingItem = cart.getItems().stream()
-            .filter(item -> item.getProductId().equals(product.getId()))
-            .findFirst();
+                .filter(item -> item.getProductId().equals(product.getId()))
+                .findFirst();
 
         if (existingItem.isPresent()) {
             CartItem item = existingItem.get();
@@ -63,44 +57,43 @@ public class OrderService {
             newItem.setQuantity(request.getQuantity());
             cart.getItems().add(newItem);
         }
-
         cart.setUpdatedAt(LocalDateTime.now());
         Cart savedCart = cartRepository.save(cart);
         return mapToCartResponse(savedCart);
     }
 
+    @Transactional
     public CartResponse getCart(String cartId, String buyerEmail) {
         Cart cart = cartRepository.findByCartIdOrBuyerEmail(cartId, buyerEmail)
-            .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
-
-        // Validate all items are still available
+                .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
         List<CartItem> validItems = cart.getItems().stream()
-            .filter(item -> {
-                try {
-                    ProductResponseDto product = productServiceClient.getProduct(item.getProductId());
-                    return product != null;
-                } catch (Exception e) {
-                    return false;
-                }
-            })
-            .collect(Collectors.toList());
+                .filter(item -> {
+                    try {
+                        ProductResponseDto product = productServiceClient.getProduct(item.getProductId());
+                        return product != null;
+                    } catch (Exception e) {
+                        return false;
+                    }
+                })
+                .collect(Collectors.toList());
 
         if (validItems.size() != cart.getItems().size()) {
             cart.setItems(validItems);
             cart = cartRepository.save(cart);
         }
-        
+
         return mapToCartResponse(cart);
     }
 
+    @Transactional
     public CartResponse updateCartItem(String cartId, String buyerEmail, Long itemId, UpdateCartItemRequest request) {
         Cart cart = cartRepository.findByCartIdOrBuyerEmail(cartId, buyerEmail)
-            .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
 
         CartItem item = cart.getItems().stream()
-            .filter(i -> i.getId().equals(itemId))
-            .findFirst()
-            .orElseThrow(() -> new ResourceNotFoundException("Item not found in cart"));
+                .filter(i -> i.getId().equals(itemId))
+                .findFirst()
+                .orElseThrow(() -> new ResourceNotFoundException("Item not found in cart"));
 
         if (request.getQuantity() <= 0) {
             throw new BusinessException("Quantity must be positive");
@@ -115,12 +108,13 @@ public class OrderService {
         return mapToCartResponse(savedCart);
     }
 
+    @Transactional
     public CartResponse removeFromCart(String cartId, String buyerEmail, Long itemId) {
         Cart cart = cartRepository.findByCartIdOrBuyerEmail(cartId, buyerEmail)
-            .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
 
         boolean removed = cart.getItems().removeIf(item -> item.getId().equals(itemId));
-        
+
         if (!removed) {
             throw new ResourceNotFoundException("Item not found in cart");
         }
@@ -130,14 +124,16 @@ public class OrderService {
         return mapToCartResponse(savedCart);
     }
 
+    @Transactional
     public void clearCart(String cartId, String buyerEmail) {
         Cart cart = cartRepository.findByCartIdOrBuyerEmail(cartId, buyerEmail)
-            .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
 
         cart.getItems().clear();
         cart.setUpdatedAt(LocalDateTime.now());
         cartRepository.save(cart);
     }
+
     public OrderResponse checkout(String cartId, CheckoutRequest request) {
         Cart cart = cartRepository.findByCartIdOrBuyerEmail(cartId, request.getBuyerEmail())
                 .orElseThrow(() -> new ResourceNotFoundException("Cart not found"));
@@ -145,33 +141,36 @@ public class OrderService {
         if (cart.getItems().isEmpty()) {
             throw new BusinessException("Cannot checkout empty cart");
         }
-
-        // Validate all items and calculate total
         BigDecimal subtotal = calculateSubtotal(cart);
-
-        // Create order
         Order order = createOrder(request, subtotal);
-        Order savedOrder = orderRepository.save(order); // Persist order first to generate ID
-
-        // Create and save order items
-        createOrderItems(cart, savedOrder);
-
-        // Process inventory updates
+        order = orderRepository.save(order);
+        createOrderItems(cart, order);
+        order = orderRepository.save(order);
         updateInventory(cart);
-
-        // Clear cart
         cart.getItems().clear();
         cartRepository.save(cart);
-        OrderCreatedDto orderCreatedDto = modelMapper.map(savedOrder, OrderCreatedDto.class);
-        List<OrderItem> orderItems = orderItemRepository.findByOrderId(savedOrder.getId());
-        List<OrderItemDto> orderItemDtoList = orderItems.stream()
-                        .map(OrderItemDto::new)
-                                .collect(Collectors.toList());
+
+        // Publish event
+        OrderCreatedDto orderCreatedDto = modelMapper.map(order, OrderCreatedDto.class);
+        List<OrderItemDto> orderItemDtoList = order.getItems().stream()
+                .map(OrderItemDto::new)
+                .collect(Collectors.toList());
         orderCreatedDto.setOrderItemDtoList(orderItemDtoList);
         eventPublisher.sendCreateMessage(orderCreatedDto);
 
+        return mapToOrderResponse(order);
+    }
 
-        return mapToOrderResponse(savedOrder);
+    private void createOrderItems(Cart cart, Order order) {
+        cart.getItems().forEach(cartItem -> {
+            OrderItem orderItem = new OrderItem();
+            orderItem.setProductId(cartItem.getProductId());
+            orderItem.setProductName(cartItem.getName());
+            orderItem.setUnitPrice(cartItem.getUnitPrice());
+            orderItem.setQuantity(cartItem.getQuantity());
+            orderItem.setProductImage(cartItem.getProductImage());
+            order.addOrderItem(orderItem);
+        });
     }
 
     private BigDecimal calculateSubtotal(Cart cart) {
@@ -202,22 +201,6 @@ public class OrderService {
         return order;
     }
 
-    private void createOrderItems(Cart cart, Order order) {
-        List<OrderItem> orderItems = cart.getItems().stream()
-                .map(cartItem -> {
-                    OrderItem orderItem = new OrderItem();
-                    orderItem.setOrder(order); // Only set the parent reference
-                    orderItem.setProductId(cartItem.getProductId());
-                    orderItem.setProductName(cartItem.getName());
-                    orderItem.setUnitPrice(cartItem.getUnitPrice());
-                    orderItem.setQuantity(cartItem.getQuantity());
-                    orderItem.setProductImage(cartItem.getProductImage());
-                    return orderItem;
-                })
-                .collect(Collectors.toList());
-        orderItemRepository.saveAll(orderItems); // Batch insert
-    }
-
     private void updateInventory(Cart cart) {
         cart.getItems().forEach(item -> {
             productServiceClient.updateProductStock(
@@ -226,22 +209,26 @@ public class OrderService {
             );
         });
     }
+
+    @Transactional(readOnly = true)
     public List<OrderResponse> getUserOrders(String buyerEmail) {
-        List<Order> orders = orderRepository.findByBuyerEmailOrderByCreatedAtDesc(buyerEmail);
+        List<Order> orders = orderRepository.findByBuyerEmail(buyerEmail);
         return orders.stream()
-            .map(this::mapToOrderResponse)
-            .collect(Collectors.toList());
+                .map(this::mapToOrderResponse)
+                .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public OrderResponse getOrder(String orderNumber, String buyerEmail) {
         Order order = orderRepository.findByOrderNumberAndBuyerEmail(orderNumber, buyerEmail)
-            .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
         return mapToOrderResponse(order);
     }
 
+    @Transactional
     public OrderResponse updateOrderStatus(String orderNumber, OrderStatus status) {
         Order order = orderRepository.findByOrderNumber(orderNumber)
-            .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
 
         order.setStatus(status);
         order.setUpdatedAt(LocalDateTime.now());
@@ -250,9 +237,9 @@ public class OrderService {
     }
 
     private Cart getOrCreateCart(String cartId, String buyerEmail) {
-        Optional<Cart> cartOptional = buyerEmail != null 
-            ? cartRepository.findByBuyerEmail(buyerEmail)
-            : cartRepository.findByCartId(cartId);
+        Optional<Cart> cartOptional = buyerEmail != null
+                ? cartRepository.findByBuyerEmail(buyerEmail)
+                : cartRepository.findByCartId(cartId);
 
         if (cartOptional.isPresent()) {
             return cartOptional.get();
@@ -278,9 +265,9 @@ public class OrderService {
     }
 
     private BigDecimal calculateDeliveryFee(String deliveryMethod) {
-        return "delivery".equalsIgnoreCase(deliveryMethod) 
-            ? BigDecimal.valueOf(2000) // NGN 2000 delivery fee
-            : BigDecimal.ZERO;
+        return "delivery".equalsIgnoreCase(deliveryMethod)
+                ? BigDecimal.valueOf(2000) // NGN 2000 delivery fee
+                : BigDecimal.ZERO;
     }
 
     private String generateOrderNumber() {
@@ -291,17 +278,17 @@ public class OrderService {
         CartResponse response = new CartResponse();
         response.setCartId(cart.getCartId());
         response.setItems(cart.getItems().stream()
-            .map(this::mapToCartItemDto)
-            .collect(Collectors.toList()));
-        
+                .map(this::mapToCartItemDto)
+                .collect(Collectors.toList()));
+
         BigDecimal totalPrice = cart.getItems().stream()
-            .map(item -> item.getUnitPrice().multiply(BigDecimal.valueOf(item.getQuantity())))
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-        
+                .map(item -> item.getUnitPrice().multiply(BigDecimal.valueOf(item.getQuantity())))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
         int totalItems = cart.getItems().stream()
-            .mapToInt(CartItem::getQuantity)
-            .sum();
-        
+                .mapToInt(CartItem::getQuantity)
+                .sum();
+
         response.setTotalAmount(totalPrice);
         response.setTotalItems(totalItems);
         return response;
@@ -328,22 +315,44 @@ public class OrderService {
         response.setTotalAmount(order.getTotalAmount());
         response.setGrandTotal(order.getGrandTotal());
         response.setCreatedAt(order.getCreatedAt());
-
-        List<OrderItem> orderItems = orderItemRepository.findByOrderId(order.getId());
-        List<OrderItemDto> orderItemDtoList = orderItems.stream()
+        List<OrderItemDto> orderItemDtoList = order.getItems().stream()
                 .map(OrderItemDto::new)
-                .toList();
+                .collect(Collectors.toList());
         response.setItems(orderItemDtoList);
         return response;
     }
 
-    private OrderItemDto mapToOrderItemDto(OrderItem item) {
-        OrderItemDto dto = new OrderItemDto();
-        dto.setProductId(item.getProductId());
-        dto.setName(item.getProductName());
-        dto.setUnitPrice(item.getUnitPrice());
-        dto.setQuantity(item.getQuantity());
-        dto.setProductImage(item.getProductImage());
-        return dto;
+    @Transactional(readOnly = true)
+    public List<OrderResponse> getAllOrders() {
+        List<Order> orders = orderRepository.findAll();
+        return orders.stream()
+                .map(this::mapToOrderResponse)
+                .toList();
     }
+
+    public AddToWishlistResponse addToWishList(AddToWishlistRequest request) {
+        Optional<WishList> optionalWishList = wishListRepository.findByBuyerEmail(request.getBuyerEmail());
+
+        WishList wishList = optionalWishList.orElseGet(() -> {
+            WishList newWishList = new WishList();
+            newWishList.setBuyerEmail(request.getBuyerEmail());
+            return wishListRepository.save(newWishList);
+        });
+        ProductResponseDto product = productServiceClient.getProduct(request.getProductId());
+        WishListItem item = modelMapper.map(product, WishListItem.class);
+        item.setWishlist(wishList);
+        wishListItemRepository.save(item);
+        return modelMapper.map(wishList, AddToWishlistResponse.class);
+    }
+
+    public WishListResponse getUserWishList(String buyerEmail) {
+        WishList wishList = wishListRepository.findByBuyerEmail(buyerEmail).get();
+        List<WishListItem> items = wishListItemRepository.findByWishlistId(wishList.getId());
+        WishListResponse response = new WishListResponse();
+        response.setId(wishList.getId());
+        response.setBuyerEmail(wishList.getBuyerEmail());
+        response.setWishList(items);
+        return response;
+    }
+
 }
